# resume-fullproject

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 75e6b08c10ec_users_table_create.py  f4abb91ffa5b_resumes_and_resume_history_create_table.py
backend/app/: database.py  dependencies.py  main.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  resume.py  user.py
backend/app/repositories/: resume_repo.py  user_repo.py
backend/app/routers/: auth.py  resume.py
backend/app/schemas/: auth.py  resume.py  user.py
backend/app/services/: auth_service.py  resume_service.py
backend/tests/: conftest.py  test_dependencies.py  test_security.py
backend/tests/repositories/: test_resume_repo.py  test_user_repo.py
backend/tests/routes/: test_auth.py  test_resume.py
backend/tests/schemas/: test_auth.py  test_resume.py  test_user.py
backend/tests/services/: test_auth_service.py  test_resume_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: ResumeForm.vue
frontend/src/router/: index.js
frontend/src/views/: AuthView.vue  ResumesView.vue
